--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@kinde-oss/kinde-auth-nextjs": "^2.2.13",
+    "@prisma/client": "^5.14.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
