--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{
+{ 
+  "type": " module",
   "name": "code-grind",
   "version": "0.1.0",
   "private": true,
@@ -25,6 +26,5 @@
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  },
-  "type": " module"
+  }
 }
